bluec-tests/tests/invalid/types_bool/conflicting_variable_types.c
long a;

int main(void) {
    extern _Bool a;
    return 0;
}